Css improvements, overflow bug fix

--- a/sam-reed-styles.css
+++ b/sam-reed-styles.css
@@ -8,6 +8,7 @@ html {
 
 body {
 	width: 100%;
+	overflow-x: hidden;
 	margin: 0;
 	background-color: rgba(221, 241, 244, 0.7);
 }
@@ -36,10 +37,14 @@ nav a {
 	margin-right: 1vw;
 	text-decoration: none;
 	color: black;
+
+	transition: all 0.15s ease-in-out;
 }
 
 nav a:hover {
-	background-color: gray;
+	border-bottom: 0.15rem solid var(--accent_color);
+	text-decoration: none;
+	color: var(--accent_color);
 }
 
 #main_content {
